# goppai

./: CHANGELOG.md  classifiers.txt  package.json  pyproject.toml
.github/workflows/: cd.yml
goppai/: __init__.py  __main__.py
goppai/go2048/: board.py  tile.py
