[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "goppai"
authors = [{name = "Prosperokay", email = "prosperokay@gmail.com"}]
readme = "readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.6.1"
description = "Game set for developers to release stress with their console"
requires-python = ">=3.8"
dependencies = []


[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "mypy",
    "flit",
]
