[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "goppai"
authors = [
    {name = "Prosperokay", email = "prosperokay@gmail.com"}
]
version = "0.1.2-alpha.0"
description = "Game set for developers to release stress with the terminal"
keywords = [
    "goppai",
    "puzzles",
    "games",
    "cli",
    "cui",
    "terminal",
]
readme = "readme.md"
license = {file = "LICENSE"}
dynamic = ["classifiers"]
requires-python = ">=3.8"

dependencies = [
    'windows-curses ; platform_system=="Windows"'
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "mypy",
    "flit",
]

[project.urls]
"Repository" = "https://github.com/ProsperoKay/goppai"
"Bug Tracker" = "https://github.com/ProsperoKay/goppai/issues"

[project.scripts]
goppai="goppai:main"
